--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="styles.css">
 	<title>Viljami Erola - portfolio</title>
-	<link rel="icon" type="image/x-icon" href="photos/favicon.png">
+	<link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 
 
@@ -14,7 +14,7 @@
 		<!-- otsikkeet -->
 		<div style="float:right" ;>
 			<div class="topnav">
-				<a href="Portfolio.html">Suomi</a>
+				<a href="index.html">Suomi</a>
 				<a href="" onclick="NotUsed()">English</a>
 				<a href="" onclick="NotUsed()">Swedish</a>
 			</div>
@@ -35,7 +35,7 @@
 			<!-- Harrastukset/harrastukset.html -->
 			<!-- Referenssit/referenssit.html -->
 
-			<a href="KoKo/KoKo.html">Koulutus ja kokemus</a>
+			<a href="KoKo.html">Koulutus ja kokemus</a>
 
 			<a href=""
 			   onclick="NotUsed()">Harrastukset</a>
@@ -43,17 +43,17 @@
 			<a href=""
 			   onclick="NotUsed()">Referenssit</a>
 
-			<a href="Galleria/galleria.html">Galleria</a>
+			<a href="galleria.html">Galleria</a>
 			<a href="https://viljamierolaofficial.blogspot.com/" target="_blank">Blogi</a>
-			<a href="Junk/Toolbox.html" onclick="Locked()"> Sivuston työkalut</a>
-			<a href="WebPageGame/Game1.html" target="_blank">Peli</a>
+			<a href="Toolbox.html" onclick="Locked()"> Sivuston työkalut</a>
+			<a href="Game1.html" target="_blank">Peli</a>
 		</nav>
 
 
 		<!-- henkilökuva -->
 		<div>
 			<div class="div3">
-				<img src="photos/hlöKuva.jpg" width="290" height="300"
+				<img src="hlöKuva.jpg" width="290" height="300"
 					 alt="Henkilökuva" usemap="#hlökuva">
 				<map name="hlökuva">
 					<area shape="circle" coords="170,60,40" href="https://www.instagram.com/vileeh/?hl=fi"
@@ -127,7 +127,7 @@
 				Laatinut Viljami Erola<br>
 				<a href="mailto:erolav@yahoo.com">erolav@yahoo.com</a>
 				<br>
-				Tampere, Rahola, 33300<br>
+				Tampere, Lamminpää, 33420<br>
 				Suomi, Finland
 			</address>
 		</div>
