--- a/galleria.html
+++ b/galleria.html
@@ -12,7 +12,7 @@
 	</div>
 
 	<div class="topnav">
-		<a href="../Portfolio.html">Takaisin päänäkymään</a>
+		<a href="../index.html">Takaisin päänäkymään</a>
 
 		<button type="button" class="collapsible">Lankkupöytä</button>
 		<div class="dropdown">
@@ -32,7 +32,7 @@
 			</div>
 		</div>
 
-		<img src="KuvaKansio/HJ3_norkka.jpg" width="40%" height="40%" />
+		<img src="HJ3_norkka.jpg" width="40%" height="40%" />
 		<map name="Hyvä joukkue 3">
 
 
