--- a/harrastukset.html
+++ b/harrastukset.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div>
-		<a href="../Portfolio.html">Takaisin päänäkymään</a>
+		<a href="index.html">Takaisin päänäkymään</a>
 		<a href="https://www.eliteprospects.com/player/376248/viljami-erola"
 		target="_blank">Vanhat tilastot</a>
 	</div>
