--- a/referenssit.html
+++ b/referenssit.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="Refstyles.css">
 	<title>Referenssit</title>
-	<link rel="icon" type="image/x-icon" href="photos/favicon.png">
+	<link rel="icon" type="x-icon" href="favicon.png">
 </head>
 <body>
 <h1>Referenssit</h1>
