--- a/galleria.html
+++ b/galleria.html
@@ -12,7 +12,7 @@
 	</div>
 
 	<div class="topnav">
-		<a href="../index.html">Takaisin päänäkymään</a>
+		<a href="index.html">Takaisin päänäkymään</a>
 
 		<button type="button" class="collapsible">Lankkupöytä</button>
 		<div class="dropdown">
