--- a/Toolbox.html
+++ b/Toolbox.html
@@ -15,7 +15,7 @@
 	</div>
 
 	<div class="topnav">
-		<a href="../index.html">Back to main page</a>
+		<a href="index.html">Back to main page</a>
 		<a href="#">Link</a>s
 	</div>	
  	</div>
