--- a/KoKo.html
+++ b/KoKo.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="KStyles.css">
 	<title>Koulutus ja kokemus</title>
-	<link rel="icon" type="image/x-icon" href="photos/favicon.png">
+	<link rel="icon" type="x-icon" href="favicon.png">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 
 		<!-- Navigointipalkki -->
 		<div class="topnav" ;>
-			<a href="../Portfolio.html">Takaisin päänäkymään</a>
+			<a href="index.html">Takaisin päänäkymään</a>
 		</div>
 	</header>
 
