--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="styles.css">
 	<title>Viljami Erola - portfolio</title>
-	<link rel="icon" type="image/x-icon" href="favicon.png">
+	<link rel="icon" type="x-icon" href="favicon.png">
 </head>
 
 
