--- a/KoKo.html
+++ b/KoKo.html
@@ -16,6 +16,8 @@
 		<!-- Navigointipalkki -->
 		<div class="topnav" ;>
 			<a href="index.html">Takaisin päänäkymään</a>
+			<a href="index.html">Suomi</a>
+
 		</div>
 	</header>
 
