--- a/KoKo.html
+++ b/KoKo.html
@@ -17,6 +17,7 @@
 		<div class="topnav" ;>
 			<a href="index.html">Takaisin päänäkymään</a>
 			<a href="index.html">Suomi</a>
+			<a href="index.html">Testinapukka</a>
 
 		</div>
 	</header>
