--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<!--otsikko-->
 		<h1>Viljami Erola - Portfolio</h1>
 		<section>
-			<div style="margin:20px;">
+			<div style="margin:20px; font-size:50px;">
 				<b>Rakennusinsinööri</b>
 				<br>
 			</div>
