--- a/Portfolio_EN.HTML
+++ b/Portfolio_EN.HTML
@@ -14,7 +14,7 @@
 <div class="header">
 
 	<div style="float:right";>
-		<a href="Portfolio.html">Suomi</a>
+		<a href="index.html">Suomi</a>
 		<a href="">English</a>
 		<a href="">Svedish</a>
 	</div>
