--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div style="float:right" ;>
 			<div class="topnav">
 				<a href="index.html">Suomi</a>
-				<a href="" onclick="NotUsed()">English</a>
+				<a href="portfolio_EN.HTML">English</a>
 				<a href="" onclick="NotUsed()">Swedish</a>
 			</div>
 		</div>
